--- a/client/templates/dyba-main.html
+++ b/client/templates/dyba-main.html
@@ -1,19 +1,13 @@
-<div class="dyba-main-header">
-  <div class="dyba-main-header-row1">
-    <div class="dyba-main-header-row1-outside"></div>
-    <div class="dyba-main-header-row1-border"></div>
-      <div></div>
-      <div></div>
-    <div class="dyba-main-header-row1-image"></div>
-    <div class="dyba-main-header-row1-border"></div>
-      <div></div>
-      <div></div>
-    <div class="dyba-main-header-row1-outside"></div>
+<div class="dyba-main-heading">
+  <div class="dyba-main-heading-row1">
+    <div class="dyba-main-heading-row1-border"></div>
+    <div class="dyba-main-heading-row1-image">
+      <img class="dyba-main-heading-row1-image-file" src="/images/jaguar.svg">
+    </div>
+    <div class="dyba-main-heading-row1-border"></div>
   </div>
-  <div class="dyba-main-header-row2"></div>
-  <div class="dyba-main-header-row3"></div>
-    <div></div>
-    <div></div>
+  <div class="dyba-main-heading-row2">WELCOME</div>
+  <div class="dyba-main-heading-row3"></div>
 </div>
 <div class="dyba-main-content"></div>
 
