--- a/client/templates/dyba-header.html
+++ b/client/templates/dyba-header.html
@@ -5,7 +5,7 @@
     <img src="/images/Jags-shield-logo-white-text.png" class="dyba-nav-logo">
   </a>
   <div class="dyba-title-container col-xs-10 col-sm-8">
-    <span class="dyba-jaguars">D'EVELYN YOUTH BASKETBALL</span>
+    <span class="dyba-title">D'EVELYN YOUTH BASKETBALL</span>
   </div>
   <div class="col-xs-1"></div>
 </div>
@@ -17,45 +17,45 @@
     </li>
     <li class="dyba-nav-item roar">
       <a href="#">
-        <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+        <img src="/images/animal-paw-print_green.svg" class="dyba-nav-logo-small">
       </a>
     </li>
-    <li class="dyba-nav-header-container">
-      <a class="dyba-nav-header" role="menuitem" href="#">TEAMS</a>
-      <ul class="dyba-nav-submenu">
+    <li class="dyba-nav-dropdown-container">
+      <a class="dyba-nav-dropdown-header" role="menuitem" href="#">TEAMS</a>
+      <ul class="dyba-nav-dropdown-menu">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
       </ul>
     </li>
     <li class="dyba-nav-item">
-      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+      <img src="/images/animal-paw-print_green.svg" class="dyba-nav-logo-small">
     </li>
-    <li class="dyba-nav-header-container">
-      <a class="dyba-nav-header" role="menuitem" href="#">PROGRAMS</a>
-      <ul class="dyba-nav-submenu">
+    <li class="dyba-nav-dropdown-container">
+      <a class="dyba-nav-dropdown-header" role="menuitem" href="#">PROGRAMS</a>
+      <ul class="dyba-nav-dropdown-menu">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
       </ul>
     </li>
     <li class="dyba-nav-item">
-      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+      <img src="/images/animal-paw-print_green.svg" class="dyba-nav-logo-small">
     </li>
-    <li class="dyba-nav-header-container">
-      <a class="dyba-nav-header" role="menuitem" href="#">ABOUT</a>
-      <ul class="dyba-nav-submenu">
+    <li class="dyba-nav-dropdown-container">
+      <a class="dyba-nav-dropdown-header" role="menuitem" href="#">ABOUT</a>
+      <ul class="dyba-nav-dropdown-menu">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
       </ul>
     </li>
     <li class="dyba-nav-item">
-      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+      <img src="/images/animal-paw-print_green.svg" class="dyba-nav-logo-small">
     </li>
-    <li class="dyba-nav-header-container">
-      <a class="dyba-nav-header" role="menuitem" href="#">COACHES</a>
-      <ul class="dyba-dropdown-menu dyba-nav-submenu">
+    <li class="dyba-nav-dropdown-container">
+      <a class="dyba-nav-dropdown-header" role="menuitem" href="#">COACHES</a>
+      <ul class="dyba-nav-dropdown-menu">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
@@ -69,45 +69,45 @@
     </li>
     <li class="dyba-nav-item roar">
       <a href="#">
-        <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+        <img src="/images/animal-paw-print_green.svg" class="dyba-nav-logo-small">
       </a>
     </li>
-    <li class="dyba-nav-header-container">
-      <a class="dyba-nav-header" role="menuitem" href="#">TEAMS</a>
-      <ul class="dyba-nav-submenu">
+    <li class="dropdown dyba-nav-dropdown-container">
+      <a class="dyba-nav-dropdown-header" id="dropdownMenuSM1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">TEAMS</a>
+      <ul class="dropdown-menu dyba-nav-dropdown-menu" aria-labelledby="dropdownMenuSM1">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
       </ul>
     </li>
     <li class="dyba-nav-item">
-      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+      <img src="/images/animal-paw-print_green.svg" class="dyba-nav-logo-small">
     </li>
-    <li class="dyba-nav-header-container">
-      <a class="dyba-nav-header" role="menuitem" href="#">PROGRAMS</a>
-      <ul class="dyba-nav-submenu">
+    <li class="dropdown dyba-nav-dropdown-container">
+      <a class="dyba-nav-dropdown-header" id="dropdownMenuSM2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">PROGRAMS</a>
+      <ul class="dropdown-menu dyba-nav-dropdown-menu" aria-labelledby="dropdownMenuSM2">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
       </ul>
     </li>
     <li class="dyba-nav-item">
-      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+      <img src="/images/animal-paw-print_green.svg" class="dyba-nav-logo-small">
     </li>
-    <li class="dyba-nav-header-container">
-      <a class="dyba-nav-header" role="menuitem" href="#">ABOUT</a>
-      <ul class="dyba-nav-submenu">
+    <li class="dropdown dyba-nav-dropdown-container">
+      <a class="dyba-nav-dropdown-header" id="dropdownMenuSM3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">ABOUT</a>
+      <ul class="dropdown-menu dyba-nav-dropdown-menu" aria-labelledby="dropdownMenuSM3">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
       </ul>
     </li>
     <li class="dyba-nav-item">
-      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+      <img src="/images/animal-paw-print_green.svg" class="dyba-nav-logo-small">
     </li>
-    <li class="dropdown dyba-nav-header-container">
-      <a class="dyba-nav-header" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">COACHES</a>
-      <ul class="dropdown-menu dyba-nav-submenu" aria-labelledby="dropdownMenu2">
+    <li class="dropdown dyba-nav-dropdown-container">
+      <a class="dyba-nav-dropdown-header" id="dropdownMenuSM4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">COACHES</a>
+      <ul class="dropdown-menu dyba-nav-dropdown-menu" aria-labelledby="dropdownMenuSM4">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
@@ -117,11 +117,11 @@
 
   <div class="row xs-row hidden-sm hidden-md hidden-lg">
     <div class="dropdown dyba-xs-nav-dropdown">
-      <button class="btn btn-default dropdown-toggle dyba-xs-nav-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+      <button class="btn btn-default dropdown-toggle dyba-xs-nav-button" type="button" id="dropdownMenuXS" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
         Menu
         <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuXS">
         <li><a href="#">Action</a></li>
         <li><a href="#">Another action</a></li>
         <li><a href="#">Something else here</a></li>
