--- a/client/templates/dyba-main.html
+++ b/client/templates/dyba-main.html
@@ -2,7 +2,7 @@
   <div class="dyba-main-heading-row1">
     <div class="dyba-main-heading-row1-border"></div>
     <div class="dyba-main-heading-row1-image">
-      <img class="dyba-main-heading-row1-image-file" src="/images/jaguar.svg">
+      <img class="dyba-main-heading-row1-image-file" src="/images/Jags head white-green.png">
     </div>
     <div class="dyba-main-heading-row1-border"></div>
   </div>
