--- a/server/view.ejs
+++ b/server/view.ejs
@@ -12,13 +12,18 @@
   <body>
     <div class="container-fluid">
       <div class="row tory-container">
-        <div class="main-container col-sm-8 col-sm-push-4">
+        <div class="main-container col-md-8 col-md-push-4">
+          <div class="tr-circle">
+            <span class="tr-text">TR</span>
+            <span class="tr-phone1">303</span>
+            <span class="tr-phone2">589.5626</span>
+          </div>
           Tory Rahm<br><span class="fr-ed">Front-end Developer</span>
         </div>
-        <div class="sidebar-container col-sm-4 col-sm-pull-8">
+        <div class="sidebar-container col-md-4 col-md-pull-8">
           <div class="profile-container">
             <h2 class="profile-heading">Profile</h2>
-            <p>I am a mechanical engineer learning front-end development. I have experience with HTML5, CSS3, JavaScript, jQuery, Backbone, Underscore, Bootstrap and Handlebars. I am new to front-end development. However, I have the intelligence, inherent skills, business experience and work ethic to be successful in this industry. I have a passion for learning and I am a relentless problem-solver. Check out my work at the links below. Please contact me at toryrahm at gmail if you have an opening for a junior developer. Thanks!</p>
+            <p>I am an engineer learning front-end development. I have experience with JavaScript, jQuery, React, Backbone, Underscore, Bootstrap, Handlebars, HTML and CSS. I am new to front-end development. However, I have the intelligence, inherent skills, business experience and work ethic to be successful in this industry. I have a passion for learning and I am a relentless problem-solver. Check out my work at the links below. Please contact me at toryrahm at gmail if you have an opening for a junior developer. Thanks!</p>
           </div>
           <div class="social-container">
             <a class="social-link" href="https://www.linkedin.com/in/toryrahm">
