--- a/client/styles/dyba.scss
+++ b/client/styles/dyba.scss
@@ -67,7 +67,7 @@
   left: 0;
   line-height: 100px;
   font-size: 20px;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
   color: white;
   text-align: center;
   opacity: 0;
@@ -89,7 +89,7 @@
   text-align: left;
   font-size: 5vw;
   line-height: 100px;
-  font-family: 'collegiate_solid', cursive;
+  font-family: 'collegiate_solid', serif;
 }
 .dyba-nav-bar {
   position: relative;
@@ -118,7 +118,7 @@
   text-align: center;
   line-height: 30px;
   font-size: 16px;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
 }
 .dyba-nav-item {
   position: relative;
@@ -145,7 +145,7 @@
   text-align: center;
   line-height: 30px;
   font-size: 16px;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
 }
 .dyba-nav-dropdown-menu {
   position: absolute;
@@ -167,7 +167,7 @@
   clear: both;
   color: black;
   font-size: 15px;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
   text-align: left;
   font-weight: normal;
   white-space: nowrap;
@@ -184,7 +184,7 @@
   width: 90%;
   max-width: 350px;
   margin: auto;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
 }
 .dyba-xs-nav-button {
   width: 100%;
@@ -242,7 +242,7 @@
   font-size: 65px;
   line-height: 80px;
   letter-spacing: 5px;
-  font-family: 'nexa_shadow', cursive;
+  font-family: 'nexa_shadow', serif;
 }
 .dyba-main-heading-row3 {
   position: relative;
@@ -250,6 +250,21 @@
   width: 100%;
   height: 15px;
   border-bottom: 3px ridge var(--heading);
+}
+.dyba-main-content {
+  padding: 40px;
+}
+.dyba-main-content p {
+  position: relative;
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  max-width: 700px;
+  line-height: 27px;
+  color: black;
+  font-size: 18px;
+  font-family: 'Happy Monkey', serif;
+  text-align: left;
 }
 ul {
   list-style-type: none;
