--- a/public/main.css
+++ b/public/main.css
@@ -129,7 +129,7 @@
   left: 0;
   line-height: 100px;
   font-size: 20px;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
   color: white;
   text-align: center;
   opacity: 0;
@@ -154,7 +154,7 @@
   text-align: left;
   font-size: 5vw;
   line-height: 100px;
-  font-family: 'collegiate_solid', cursive;
+  font-family: 'collegiate_solid', serif;
 }
 
 .dyba-nav-bar {
@@ -187,7 +187,7 @@
   text-align: center;
   line-height: 30px;
   font-size: 16px;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
 }
 
 .dyba-nav-item {
@@ -218,7 +218,7 @@
   text-align: center;
   line-height: 30px;
   font-size: 16px;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
 }
 
 .dyba-nav-dropdown-menu {
@@ -242,7 +242,7 @@
   clear: both;
   color: black;
   font-size: 15px;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
   text-align: left;
   font-weight: normal;
   white-space: nowrap;
@@ -262,7 +262,7 @@
   width: 90%;
   max-width: 350px;
   margin: auto;
-  font-family: 'nexa_hand', cursive;
+  font-family: 'nexa_hand', serif;
 }
 
 .dyba-xs-nav-button {
@@ -328,7 +328,7 @@
   font-size: 65px;
   line-height: 80px;
   letter-spacing: 5px;
-  font-family: 'nexa_shadow', cursive;
+  font-family: 'nexa_shadow', serif;
 }
 
 .dyba-main-heading-row3 {
@@ -337,6 +337,23 @@
   width: 100%;
   height: 15px;
   border-bottom: 3px ridge var(--heading);
+}
+
+.dyba-main-content {
+  padding: 40px;
+}
+
+.dyba-main-content p {
+  position: relative;
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  max-width: 700px;
+  line-height: 27px;
+  color: black;
+  font-size: 18px;
+  font-family: 'Happy Monkey', serif;
+  text-align: left;
 }
 
 ul {
