--- a/client/templates/dyba-main.html
+++ b/client/templates/dyba-main.html
@@ -10,7 +10,7 @@
   <div class="dyba-main-heading-row3"></div>
 </div>
 <div class="dyba-main-content">
-  <p>D'Evelyn Youth Basketball Association is a basketball club that was organized to provide an opportunity for Dennison and current/future D’Evelyn boys to play together on teams. We have teams from Kindergarten through 8th grade. Our teams play in the Jefferson County Basketball Conference and our older kids also play in the Gold Crown league. Our annual membership dues are $30 which allows us to cover the costs of running the club (and a t-shirt for each player and coach) as well as provide scholarships to players and appreciation gifts to our coaches. You must register each year to be a member of the club. Dues are payable in August. You must be a member to play on our teams.
+  <p>D'Evelyn Youth Basketball Association is a basketball club that was organized to provide an opportunity for Dennison and current/future D’Evelyn boys to play together. We have teams from Kindergarten through 8th grade. Our teams play in the Jefferson County Basketball Conference and our older kids also play in the Gold Crown league. Our annual membership dues are $30 which allows us to cover the costs of running the club (and a t-shirt for each player and coach) as well as provide scholarships to players and appreciation gifts to our coaches. You must register each year to be a member of the club. Dues are payable in August. You must be a member to play on our teams.
 </p>
 </div>
 
