--- a/client/styles/dyba.scss
+++ b/client/styles/dyba.scss
@@ -2,10 +2,6 @@
   --heading: #97a88e;
 }
 @font-face {
-    font-family: collegiate_solid;
-    src: url(/css/SF_Collegiate_Solid.ttf);
-}
-@font-face {
     font-family: nexa_hand;
     src: url(/css/NexaRustHand.ttf);
 }
@@ -22,7 +18,7 @@
   display: block;
   position: relative;
   width: 100%;
-  height: 1040px;
+  height: auto;
   background-image: url("/images/Jags Logo Green.png");
   background-size: 200px;
 }
@@ -32,6 +28,7 @@
   position: relative;
   width: 100%;
   height: auto;
+  min-height: 100vh;
   background-image:
     linear-gradient(
       to right,
@@ -87,13 +84,14 @@
   display: block;
   color: white;
   text-align: left;
-  font-size: 5vw;
+  font-size: 3.8vw;
   line-height: 100px;
-  font-family: 'collegiate_solid', serif;
+  font-family: 'jags', serif;
 }
 .dyba-nav-bar {
   position: relative;
   display: block;
+  height: auto;
   margin: 0;
 }
 .dyba-nav-container {
@@ -103,6 +101,12 @@
   margin-bottom: 0;
   background-color: white;
   text-align: center;
+  border-bottom: 2px solid black;
+}
+.dyba-nav-container-md.sticky {
+  position: fixed;
+  top: 0;
+  z-index: 99;
 }
 .dyba-nav-link-container {
   position: relative;
@@ -193,11 +197,14 @@
   position: relative;
   display: block;
   width: 100%;
-  height: 900px;
+  height: auto;
+  min-height: 700px;
   margin: 0;
   padding-top: 40px;
   background-color: #dddedd;
-  border-top: 2px solid black;
+}
+.dyba-main.sticky {
+  top: 30px;
 }
 .dyba-main-heading {
   position: relative;
@@ -231,6 +238,8 @@
   position: relative;
   width: 60px;
   top: -25px;
+  opacity: 0;
+  animation: show-jag 1s 1.5s forwards cubic-bezier(.64,1.87,.64,.64);
 }
 .dyba-main-heading-row2 {
   position: relative;
@@ -268,6 +277,16 @@
 }
 ul {
   list-style-type: none;
+}
+@keyframes show-jag {
+  0% {
+    opacity: 0;
+    transform: rotateZ(-100deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotateZ(0);
+  }
 }
 @media (max-width: 768px) {
   .dyba-title-bar {
