--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,6 @@
 .todo-container {
-  width: 456px;
+  width: 90%;
+  max-width: 455px;
   height: auto;
   margin: 10px auto 0;
   position: relative;
@@ -9,7 +10,7 @@
 }
 
 .todo-header {
-  width: 456px;
+  width: 100%;
   height: 26px;
   background: #999999;
   color: black;
@@ -22,21 +23,21 @@
 
 .add-todo-container {
   position: relative;
-  width: auto;
+  width: 100%;
   height: 40px;
   padding: 5px 5px 0 5px;
 }
 
 .add-todo-container .enter-todo {
   position: relative;
-  width: 370px;
+  width: calc(100% - 75px);
   float: left;
 }
 
 .add-todo-container button {
   position: relative;
   width: 70px;
-  background: #999999;
+  background: #999;
   padding: 4px 12px;
   font-size: 17px;
   color: black;
@@ -44,13 +45,13 @@
 }
 
 .todo-container .list-group {
-  margin: 4px 0;
+  margin: 4px 5px;
 }
 
 .list-group-item {
   position: relative;
   height: 46px;
-  margin: 0 5px;
+  margin: 0;
 }
 
 .todo-footer {
@@ -356,7 +357,7 @@
 .dyba-main-content p {
   position: relative;
   display: block;
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   max-width: 700px;
   line-height: 27px;
