--- a/public/main.css
+++ b/public/main.css
@@ -54,6 +54,10 @@
   margin: 0;
 }
 
+.todo-close {
+  text-align: right;
+}
+
 .todo-footer {
   height: 1px;
 }
@@ -68,8 +72,8 @@
 }
 
 @font-face {
-  font-family: jags;
-  src: url(/css/jagb.ttf);
+  font-family: nexa;
+  src: url(/css/NexaRustSlab-1.ttf);
 }
 
 @font-face {
@@ -149,9 +153,9 @@
   display: block;
   color: white;
   text-align: left;
-  font-size: 3.8vw;
+  font-size: 3.2vw;
   line-height: 100px;
-  font-family: 'jags', serif;
+  font-family: 'nexa', serif;
 }
 
 .dyba-nav-bar {
@@ -393,8 +397,8 @@ ul {
   }
   .dyba-title {
     text-align: center;
-    line-height: 40px;
-    font-size: 40px;
+    line-height: 34px;
+    font-size: 34px;
   }
   .dyba-main-heading {
     width: 80%;
