--- a/client/templates/dyba-footer.html
+++ b/client/templates/dyba-footer.html
@@ -1,4 +1,16 @@
-<div>Footer</div>
-<div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 
-<div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<div class="dyba-footer-credits col-xs-12 col-md-4">
+  <p>Credits</p>
+  <div class="dyba-footer-credits-popup">Paw icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>, is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+</div>
+<div class="dyba-footer-middle col-xs-12 col-md-4">
+  <div class="dyba-footer-created">
+    <a href="https://tory-rahm.herokuapp.com/">Created by Tory Rahm</a>
+  </div>
+  <div class="dyba-footer-copyright">
+    <p>Copyright c 2016. All rights reserved.</p>
+  </div>
+</div>
+<div class="dyba-footer-contact col-xs-12 col-md-4">
+  <p>Contact DYBA: director@develynyouthbasketball.org</p>
+</div>
