--- a/public/main.css
+++ b/public/main.css
@@ -87,8 +87,15 @@
   position: relative;
   width: 100%;
   height: auto;
+}
+
+.dyba-header {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin: 0;
   background-image: url("/images/Jags Logo Green.png");
-  background-size: 200px;
+  background-size: 190px;
 }
 
 .dyba-background {
@@ -97,15 +104,7 @@
   position: relative;
   width: 100%;
   height: auto;
-  min-height: 100vh;
   background-image: linear-gradient(to right, rgba(0, 82, 20, 0.9), #005214 20%, #005214 80%, rgba(0, 82, 20, 0.9));
-}
-
-.dyba-header {
-  position: relative;
-  display: block;
-  width: 100%;
-  margin: 0;
 }
 
 .dyba-title-bar {
@@ -175,7 +174,7 @@
   border-bottom: 2px solid black;
 }
 
-.dyba-nav-container-md.sticky {
+.dyba-nav-container.sticky {
   position: fixed;
   top: 0;
   z-index: 99;
@@ -283,7 +282,7 @@
   display: block;
   width: 100%;
   height: auto;
-  min-height: calc(100vh - 130px);
+  min-height: 600px;
   margin: 0;
   padding-top: 40px;
   background-color: #dddedd;
@@ -376,6 +375,92 @@ ul {
   list-style-type: none;
 }
 
+.dyba-footer {
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 0 10px;
+  background: #005214;
+  color: var(--heading);
+  font-family: 'Happy Monkey', serif;
+  font-size: 12px;
+}
+
+.dyba-footer-credits {
+  position: relative;
+  display: inline-block;
+  height: 50px;
+}
+
+.dyba-footer-credits p {
+  line-height: 50px;
+  text-align: left;
+  margin-bottom: 0;
+}
+
+.dyba-footer-credits-popup {
+  position: relative;
+  opacity: 0;
+  width: 200px;
+  height: 66px;
+  padding: 3px;
+  line-height: 20px;
+  border-radius: 5px;
+  background: #005214;
+  text-align: left;
+  bottom: 66px;
+}
+
+.dyba-footer-middle {
+  position: relative;
+  display: inline-block;
+  height: 50px;
+  padding: 5px 0;
+}
+
+.dyba-footer-created {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 50%;
+  text-align: center;
+}
+
+.dyba-footer-created a {
+  line-height: 20px;
+  color: var(--heading);
+}
+
+.dyba-footer-created a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.dyba-footer-copyright {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 50%;
+}
+
+.dyba-footer-copyright p {
+  line-height: 20px;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.dyba-footer-contact {
+  position: relative;
+  display: inline-block;
+  height: 50px;
+}
+
+.dyba-footer-contact p {
+  line-height: 50px;
+  text-align: right;
+  margin-bottom: 0;
+}
+
 @keyframes show-jag {
   0% {
     opacity: 0;
@@ -387,7 +472,31 @@ ul {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 991px) {
+  .dyba-footer-credits {
+    height: 20px;
+  }
+  .dyba-footer-credits p {
+    line-height: 20px;
+    text-align: center;
+  }
+  .dyba-footer-credits-popup {
+    margin: 0 auto;
+  }
+  .dyba-footer-middle {
+    height: 40px;
+    padding: 0;
+  }
+  .dyba-footer-contact {
+    height: 20px;
+  }
+  .dyba-footer-contact p {
+    line-height: 20px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 767px) {
   .dyba-title-bar {
     height: auto;
   }
@@ -416,6 +525,13 @@ ul {
     font-size: 40px;
     line-height: 50px;
     letter-spacing: 3px;
+  }
+}
+
+@media (max-width: 450px) {
+  .dyba-title {
+    text-align: center;
+    font-size: 7vw;
   }
 }
 
