Updated home page animation

--- a/client/styles/dyba.scss
+++ b/client/styles/dyba.scss
@@ -300,7 +300,7 @@ ul {
 }
 .dyba-footer-credits-popup {
   position: relative;
-  opacity: 0;
+  display: none;
   width: 200px;
   height: 66px;
   padding: 3px;
