--- a/client/styles/home-page.scss
+++ b/client/styles/home-page.scss
@@ -91,8 +91,7 @@
 }
 .tr-phone1 {
   position: absolute;
-  display: block;
-  opacity: 0;
+  display: none;
   width: 100%;
   line-height: 150px;
   text-align: center;
@@ -102,8 +101,7 @@
 }
 .tr-phone2 {
   position: absolute;
-  display: block;
-  opacity: 0;
+  display: none;
   width: 100%;
   line-height: 150px;
   text-align: center;
