--- a/client/templates/dyba-footer.html
+++ b/client/templates/dyba-footer.html
@@ -1,5 +1,9 @@
 
-<div class="dyba-footer-credits col-xs-12 col-md-4">
+<div class="dyba-footer-credits hidden-xs hidden-sm col-md-4">
+  <p>Credits</p>
+  <div class="dyba-footer-credits-popup">Paw icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>, is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+</div>
+<div class="dyba-footer-credits col-xs-12 hidden-md hidden-lg">
   <p>Credits</p>
   <div class="dyba-footer-credits-popup">Paw icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>, is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </div>
