Updated home page animation

--- a/client/styles/home-page.scss
+++ b/client/styles/home-page.scss
@@ -78,9 +78,9 @@
   width: 150px;
   color: #ff6500;
   border-radius: 50%;
-  background: #b24700;
+  background: #ff6500;
   margin: 0 auto 30px;
-  animation: tsr-change 3s ease-out 20 alternate;
+  animation: tsr-change 2s 1s steps(8) 15 forwards alternate;
 }
 .tr-text {
   position: absolute;
@@ -91,7 +91,8 @@
 }
 .tr-phone1 {
   position: absolute;
-  display: none;
+  display: block;
+  opacity: 0;
   width: 100%;
   line-height: 150px;
   text-align: center;
@@ -101,7 +102,8 @@
 }
 .tr-phone2 {
   position: absolute;
-  display: none;
+  display: block;
+  opacity: 0;
   width: 100%;
   line-height: 150px;
   text-align: center;
@@ -114,10 +116,10 @@
 }
 @keyframes tsr-change {
   0% {
-    background: #b24700;
+    background: #ff6500;
   }
   100% {
-    background: #ff6500;
+    background: #b24700;
   }
 }
 @media (max-width: 991px) {
