Updated home page animation

--- a/client/styles/home-page.scss
+++ b/client/styles/home-page.scss
@@ -111,6 +111,14 @@
   color: white;
   top: 15px;
 }
+.tr-circle.hidden-md .tr-phone1 {
+  display: none;
+  opacity: 1;
+}
+.tr-circle.hidden-md .tr-phone2 {
+  display: none;
+  opacity: 1;
+}
 .fr-ed {
   font-size: 45px;
 }
