--- a/public/main.css
+++ b/public/main.css
@@ -711,6 +711,16 @@ h1 {
   top: 15px;
 }
 
+.tr-circle.hidden-md .tr-phone1 {
+  display: none;
+  opacity: 1;
+}
+
+.tr-circle.hidden-md .tr-phone2 {
+  display: none;
+  opacity: 1;
+}
+
 .fr-ed {
   font-size: 45px;
 }
