--- a/server/view.ejs
+++ b/server/view.ejs
@@ -13,7 +13,12 @@
     <div class="container-fluid">
       <div class="row tory-container">
         <div class="main-container col-md-8 col-md-push-4">
-          <div class="tr-circle">
+          <div class="tr-circle hidden-xs hidden-sm">
+            <span class="tr-text">TR</span>
+            <span class="tr-phone1">303</span>
+            <span class="tr-phone2">589.5626</span>
+          </div>
+          <div class="tr-circle hidden-md hidden-lg">
             <span class="tr-text">TR</span>
             <span class="tr-phone1">303</span>
             <span class="tr-phone2">589.5626</span>
