Updated home page animation

--- a/server/view.ejs
+++ b/server/view.ejs
@@ -14,14 +14,14 @@
       <div class="row tory-container">
         <div class="main-container col-md-8 col-md-push-4">
           <div class="tr-circle hidden-xs hidden-sm">
-            <span class="tr-text">TR</span>
-            <span class="tr-phone1">303</span>
-            <span class="tr-phone2">589.5626</span>
+            <div class="tr-text">TR</div>
+            <div class="tr-phone1">303</div>
+            <div class="tr-phone2">589.5626</div>
           </div>
           <div class="tr-circle hidden-md hidden-lg">
-            <span class="tr-text">TR</span>
-            <span class="tr-phone1">303</span>
-            <span class="tr-phone2">589.5626</span>
+            <div class="tr-text">TR</div>
+            <div class="tr-phone1">303</div>
+            <div class="tr-phone2">589.5626</div>
           </div>
           Tory Rahm<br><span class="fr-ed">Front-end Developer</span>
         </div>
