Updated home page

--- a/client/templates/dyba-footer.html
+++ b/client/templates/dyba-footer.html
@@ -12,7 +12,7 @@
     <a href="https://tory-rahm.herokuapp.com/">Created by Tory Rahm</a>
   </div>
   <div class="dyba-footer-copyright">
-    <p>Copyright c 2016. All rights reserved.</p>
+    <p>Copyright &copy; 2016. All rights reserved.</p>
   </div>
 </div>
 <div class="dyba-footer-contact col-xs-12 col-md-4">
