--- a/client/templates/dyba-header.html
+++ b/client/templates/dyba-header.html
@@ -12,6 +12,7 @@
   </div>
 
   <nav class="dyba-nav-bar row">
+    <!-- Medium and large screen nav bar -->
     <ul class="dyba-nav-container dyba-nav-container-md hidden-xs hidden-sm col-md-12">
       <li class="dyba-nav-link-container">
         <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">REGISTRATION</a>
@@ -64,6 +65,7 @@
       </li>
     </ul>
 
+    <!-- Small screen nav bar -->
     <ul class="dyba-nav-container dyba-nav-container-sm hidden-xs col-sm-12 hidden-md hidden-lg">
       <li class="dyba-nav-link-container">
         <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">REGISTRATION</a>
@@ -116,6 +118,7 @@
       </li>
     </ul>
 
+    <!-- Extra-small screen nav bar -->
     <div class="row xs-row hidden-sm hidden-md hidden-lg">
       <div class="dropdown dyba-xs-nav-dropdown">
         <button class="btn btn-default dropdown-toggle dyba-xs-nav-button" type="button" id="dropdownMenuXS" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
