Removed music animation pending update

--- a/server/view.ejs
+++ b/server/view.ejs
@@ -47,9 +47,13 @@
               <a class="btn btn-primary btn-block" href="/pages/todo.html">
                 <span class="my-work-button-text">Todo Application</span>
               </a>
+              
+<!-- Needs to be updated so animation starts when the music loads
               <a class="btn btn-primary btn-block" href="/pages/music.html">
                 <span class="my-work-button-text">Music Animation</span>
               </a>
+-->
+
             </div>
           </div>
         </div>
