--- a/public/main.css
+++ b/public/main.css
@@ -628,7 +628,8 @@ h1 {
   height: auto;
   width: 90%;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
 
 .social-icon {
@@ -676,7 +677,7 @@ h1 {
   border-radius: 50%;
   background: #ff6500;
   margin: 0 auto 30px;
-  animation: tsr-change 2s 1s steps(8) 15 forwards alternate;
+  animation: tsr-change 2s 1s steps(8) 35 forwards alternate;
 }
 
 .tr-text {
