--- a/server/view.ejs
+++ b/server/view.ejs
@@ -41,7 +41,7 @@
           <div class="my-work-container">
             <h2>My Work</h2>
             <div class="button-container">
-              <a class="btn btn-primary btn-block" href="/profile/dyba">
+              <a class="btn btn-primary btn-block" href="/pages/dyba.html">
                 <span class="my-work-button-text">DYBA</span>
               </a>
               <a class="btn btn-primary btn-block" href="/pages/todo.html">
