--- a/server/view.ejs
+++ b/server/view.ejs
@@ -28,7 +28,7 @@
         <div class="sidebar-container col-md-4 col-md-pull-8">
           <div class="profile-container">
             <h2 class="profile-heading">Profile</h2>
-            <p>I am an engineer learning front-end development. I have experience with JavaScript, jQuery, React, Backbone, Underscore, Bootstrap, Handlebars, HTML and CSS. I am new to front-end development. However, I have the intelligence, inherent skills, business experience and work ethic to be successful in this industry. I have a passion for learning and I am a relentless problem-solver. Check out my work at the links below. Please contact me at toryrahm at gmail if you have an opening for a junior developer. Thanks!</p>
+            <p>I am a front-end development engineer experienced with JavaScript, jQuery, React, Backbone, Bootstrap, Handlebars, HTML and CSS. I am new to front-end development. However, I have the intelligence, inherent skills, business experience and work ethic to be successful in this industry. I have a passion for learning and I am a relentless problem-solver. Check out my work at the links below. Please contact me at toryrahm at gmail to discuss junior developer opportunities. Thanks!</p>
           </div>
           <div class="social-container">
             <a class="social-link" href="https://www.linkedin.com/in/toryrahm">
