--- a/client/styles/home-page.scss
+++ b/client/styles/home-page.scss
@@ -72,7 +72,7 @@
   font-family: immortal;
   font-size: 55px;
   line-height: 70px;
-  color: white;
+  color: #ffeee4;
 }
 .tr-circle {
   position: relative;
